Different menu dropdown to prevent heavy reflows on mobile

--- a/charat2/static/css/newparp.css
+++ b/charat2/static/css/newparp.css
@@ -197,18 +197,18 @@ content: "";
   #global_navigation li a .long {display:inline}
   #global_navigation li:active {background-color:#767676}
   #global_navigation .user a {max-width:none} 
- 
+ #global_navigation {overflow:hidden}
 #global_navigation li a .short {display:none}
 #global_navigation label:before {content: '\22EE\00a0'; font-family: Ricty, Inconsolata, "Helvetica Neue", Helvetica, Arial, sans-serif;}
-	#global_navigation label { display: block; padding: 7px 10px; background-color: #626262; cursor: pointer; height:31px;box-sizing:border-box; font-family: Ricty, Inconsolata, "Helvetica Neue", Helvetica, Arial, sans-serif; font-size:14px;line-height:20px;font-variant:normal;}
+	#global_navigation label { display: block; user-select:none; position:relative; padding: 7px 10px; background-color: #626262; cursor: pointer; height:31px;box-sizing:border-box; font-family: Ricty, Inconsolata, "Helvetica Neue", Helvetica, Arial, sans-serif; font-size:14px;line-height:20px;font-variant:normal;z-index:1}
 	#global_navigation label:hover { color: #fff; }
-	#global_navigation input:not(:checked) + ul { max-height:0px;overflow:hidden; transition:all .3s ease-in-out;}
-	#global_navigation input:checked + ul {max-height:400px;overflow:hidden;transition:all .4s ease-in-out;}
+	#global_navigation input:not(:checked) + ul { max-height:0px;overflow:hidden; transition:transform .3s ease-in-out;-webkit-transform: translate(0,-100%);transform:translate(0,-100%);}
+	#global_navigation input:checked + ul {max-height:400px;overflow:hidden;transition:transform .4s ease-in-out;-webkit-transform:translate(0,0);transform:translate(0,0);}
 	#global_navigation li { display: block; margin-left: 0; padding-left: 10px; font-variant:normal; font-family: Ricty, Inconsolata, "Helvetica Neue", Helvetica, Arial, sans-serif; font-size:14px;line-height:20px;}
 	#global_navigation .user > a:before {content: '';}
 	#global_navigation a { display: block; }
 	#global_navigation li {height:auto}
-	#global_navigation #unread_counter {height:31px;box-sizing:border-box}
+	#global_navigation #unread_counter {height:31px;box-sizing:border-box;z-index:2}
 }
 
 /* 1.3. Footer */
